--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@
 }
 
 #title {
-    scale: 25%;
-
+    width: 900px;
 }
 
 #outer {
@@ -21,6 +20,35 @@
     height: 100%;
 }
 
-#inner {
-    
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+     -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome, Edge, Opera and Firefox */
+}
+
+#play_button {
+    width: 570px;
+    height: 147px;
+
+    margin-top: 40px;
+
+    background-image: url(Assets/Overall_UI/ButtonUp.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    vertical-align: middle;
+
+    /* line-height: 120px; */
+    text-align: center;
+    line-height: 131px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: white;
+    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-color: black;
+    font-size: 80px;
+    letter-spacing: 10px;
 }
