--- a/stylePoker.css
+++ b/stylePoker.css
@@ -10,16 +10,252 @@
     width: 400px;
 }
 
+:root {
+    --selected: false;
+}
+
 #outer {
     position: relative;
     display: flex;
     flex-direction: column;
-    align-content: center;
+    align-content: flex-end;
+    justify-content: flex-end;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: 90vh;
+    border-width: 2px;
+    border-color: black;
+    border-style: dashed;
 }
 
 #pokerTable {
     width: 1500px;
+    position: absolute;
+}
+
+#gameBoard {
+    width: 1500px;
+    height: 720px;
+    position: absolute;
+
+    background-image: url(Assets/Poker/PokerTable.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+#deck {
+    margin-top: 2%;
+    margin-right: 5%;
+    margin-left: 93.8%;
+
+    width: 140px;
+    height: 190px;
+
+    position: absolute;
+
+    background-image: url(Assets/BlackJack/Cards/cardBack_blue2.png);
+    background-repeat: no-repeat;
+}
+
+div[data-selected="true"] {
+    -webkit-filter: drop-shadow(2px 2px 0 yellow)
+    drop-shadow(-2px 2px 0 yellow)
+    drop-shadow(2px -2px 0 yellow)
+    drop-shadow(-2px -2px 0 yellow);
+
+filter: drop-shadow(2px 2px 0 yellow)
+drop-shadow(-2px 2px 0 yellow)
+drop-shadow(2px -2px 0 yellow)
+drop-shadow(-2px -2px 0 yellow);
+}
+
+.card {
+    width: 140px;
+    height: 190px;
+    /* flex: 1; */
+    flex-direction: row;
+    /* -webkit-filter: drop-shadow(2px 2px 0 yellow)
+    drop-shadow(-2px 2px 0 yellow)
+    drop-shadow(2px -2px 0 yellow)
+    drop-shadow(-2px -2px 0 yellow); */
+}
+
+#cards {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    justify-self: flex-end;
+    align-self: flex-start;
+    width: 97.8%;
+    margin-left: 13px;
+}
+
+#topUI {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-bottom: auto;
+}
+
+#bets {
+    width: 300px;
+
+    font-size: 48;
+    text-align: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: white;
+    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-color: black;
+    font-size: 40px;
+    letter-spacing: 10px;
+}
+
+#winnings {
+    width: 300px;
+
+    font-size: 48;
+    text-align: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: white;
+    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-color: black;
+    font-size: 40px;
+    letter-spacing: 10px;
+}
+
+#lowUI {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    
+}
+
+#chips {
+    width: 800px;
+    margin-top: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.chip{
+    width: 70px;
+    height: 70px;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+#chip1 {
+    background-image: url(Assets/Overall_UI/Chip1.png);
+}
+
+#chip2 {
+    background-image: url(Assets/Overall_UI/Chip5.png);
+}
+
+#chip3 {
+    background-image: url(Assets/Overall_UI/Chip10.png);
+}
+
+#chip4 {
+    background-image: url(Assets/Overall_UI/Chip20.png);
+}
+
+#chip5 {
+    background-image: url(Assets/Overall_UI/Chip50.png);
+}
+
+#chip6 {
+    background-image: url(Assets/Overall_UI/Chip100.png);
+}
+
+#chip7 {
+    background-image: url(Assets/Overall_UI/Chip1000.png);
+}
+
+#chip8 {
+    background-image: url(Assets/Overall_UI/Chip5000.png);
+}
+
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+     -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome, Edge, Opera and Firefox */
+}
+
+#backBtn {
+    width: 285px;
+    height: 73px;
+
+    margin-top: 40px;
+
+    background-image: url(Assets/Overall_UI/ButtonUp.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    vertical-align: middle;
+
+    /* line-height: 120px; */
+    text-align: center;
+    line-height: 73px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: white;
+    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-color: black;
+    font-size: 40px;
+    letter-spacing: 10px;
+}
+
+#backBtn:active {
+    width: 285px;
+    height: 67px;
+
+    margin-top: 51px;
+
+    background-image: url(Assets/Overall_UI/ButtonDown.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#drawBtn {
+    width: 285px;
+    height: 73px;
+
+    margin-top: 40px;
+
+    background-image: url(Assets/Overall_UI/ButtonUp.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    vertical-align: middle;
+
+    /* line-height: 120px; */
+    text-align: center;
+    line-height: 73px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: white;
+    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-color: black;
+    font-size: 40px;
+    letter-spacing: 10px;
+}
+
+#drawBtn:active {
+    width: 285px;
+    height: 67px;
+
+    margin-top: 51px;
+
+    background-image: url(Assets/Overall_UI/ButtonDown.png);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
