--- a/stylePoker.css
+++ b/stylePoker.css
@@ -22,7 +22,7 @@
     justify-content: flex-end;
     align-items: center;
     width: 100%;
-    height: 90vh;
+    height: 60vh;
     border-width: 2px;
     border-color: black;
     border-style: dashed;
@@ -34,9 +34,10 @@
 }
 
 #gameBoard {
-    width: 1500px;
-    height: 720px;
+    width: 1100px;
+    height: 540px;
     position: absolute;
+    right: 50px;
 
     background-image: url(Assets/Poker/PokerTable.png);
     background-repeat: no-repeat;
@@ -44,9 +45,7 @@
 }
 
 #deck {
-    margin-top: 2%;
-    margin-right: 5%;
-    margin-left: 93.8%;
+    float: right;
 
     width: 140px;
     height: 190px;
@@ -124,12 +123,41 @@ drop-shadow(-2px -2px 0 yellow);
     letter-spacing: 10px;
 }
 
+#bank {
+    float: right;
+    margin-right: 135px;
+    margin-top: 65px;
+
+    font-size: 48;
+    text-align: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: white;
+    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-color: black;
+    font-size: 40px;
+    letter-spacing: 10px;
+}
+
+#lowCont {
+    height: 30vh;
+    width: 100%;
+    position: absolute;
+    border-width: 2px;
+    border-color: black;
+    border-style: dashed;
+
+}
+
 #lowUI {
+    width: 100%;
+
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-    
+
+    position: absolute;
+    bottom: 0;
 }
 
 #chips {
