--- a/styleCraps.css
+++ b/styleCraps.css
@@ -13,11 +13,40 @@
 #outer {
     position: relative;
     display: flex;
+    z-index: -1;
     flex-direction: column;
     align-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
+}
+
+#container{
+    z-index: 0;
+}
+
+#dice {
+    display: flex;
+}
+
+.die {
+    width: 100px;
+    height: 100px;
+    border-width: 2px;
+    border-style: inset;
+    border-color: coral;
+}
+
+#dice1 {
+    background-image: url(Assets/Craps/Dice1.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#dice2 {
+    background-image: url(Assets/Craps/Dice1.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #crapsTable {
